# PerformanceAware

./: .gitignore  CMakeLists.txt  README.md
scripts/: build  build_asm.bat  cmake  run
simulator/: CMakeLists.txt
simulator/src/: main.cpp  simulator_8086.cpp  simulator_8086.h
